@@ -535,6 +535,8 @@ Miscellaneous
  * The UNISTIM channel driver (chan_unistim) has been updated to support devices that
    have less than 3 lines on the LCD.
  * Realtime now supports database failover.  See the sample extconfig.conf for details.
+ * The addition of improved translation path building for wideband codecs.  Sample
+   rate changes during translation are now avoided unless absolutely necessary.
 
 CLI Changes
 -----------
